--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
         <img src="pic/lydiadraw-logo.png" alt="lydiadraw.com">
     </h1>
 	
-	<a href="index.html">Style1</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="index2.html">Style2</a>
+	<a href="index.html">Style1 界面1</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+	<a href="index-cdn.html">Style1 界面1 CDN加速测试</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+	<a href="index2.html">Style2 界面2</a>
 	
     <hr>
     <div class="spotlight-group" data-autohide="all" data-theme="white">
