add js CDN test

--- a/index-cdn.html
+++ b/index-cdn.html
@@ -6,9 +6,9 @@
     <meta name="robots" content="index, follow">
     <script language="javascript">host=location.hostname; // get host name </script>
     <title>Welcome to lydiadraw.com!</title>
-    <!--<script src="dist/spotlight.bundle.js"></script>-->
-    <script src="dist/js/spotlight.min.js"></script>
-    <link rel="stylesheet" href="dist/css/spotlight.min.css">
+    <!--<script src="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/dist/spotlight.bundle.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/dist/js/spotlight.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/dist/css/spotlight.min.css">
     <!-- Custom Control: -->
     <style>
         /*
@@ -17,12 +17,12 @@
          */
         /* custom classes are always prefixed by "spl-" automatically */
         .spl-like{
-            background-image: url(demo/gallery/heart-outline.svg);
+            background-image: url(https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/demo/gallery/heart-outline.svg);
             background-size: 23px;
         }
         /* optionally, additional state to toggle the button: */
         .spl-like.on{
-            background-image: url(demo/gallery/heart.svg);
+            background-image: url(https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/demo/gallery/heart.svg);
         }
         /*
          * Custom Animation:
@@ -56,8 +56,8 @@
         }
     </style>
     <link rel="stylesheet" href="demo/style.css">
-    <link rel="icon" sizes="16x16 32x32 48x48 64x64" type="image/png" href="https://nextapps-de.github.io/spotlight/demo/favicon.png">
-    <link rel="icon" sizes="512x512 1024x1024" type="image/png" href="https://nextapps-de.github.io/spotlight/demo/og-image.png">
+    <link rel="icon" sizes="16x16 32x32 48x48 64x64" type="image/png" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages//demo/favicon.png">
+    <link rel="icon" sizes="512x512 1024x1024" type="image/png" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/demo/og-image.png">
 </head>
 <body>
     <h1>
