add js CDN test

--- a/index-cdn.html
+++ b/index-cdn.html
@@ -55,7 +55,7 @@
             transition: clip-path 0.65s ease 0.15s;
         }
     </style>
-    <link rel="stylesheet" href="demo/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/demo/style.css">
     <link rel="icon" sizes="16x16 32x32 48x48 64x64" type="image/png" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages//demo/favicon.png">
     <link rel="icon" sizes="512x512 1024x1024" type="image/png" href="https://cdn.jsdelivr.net/gh/lydiadraw/lydiadraw.github.io@gh-pages/demo/og-image.png">
 </head>
