--- a/2022-01.html
+++ b/2022-01.html
@@ -88,126 +88,126 @@
 
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
+		<li><a href="2022-02.html">«</a></li>
+		<li><a href="index.html">1</a></li>
 		<li><a href="2022-03.html">2</a></li>
 		<li><a href="2022-02.html">3</a></li>
-		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="#" class="active">4</a></li>
+		<li><a href="#">»</a></li>
 	</ul>
 </div>
 <br>
 
     <div class="spotlight-group" data-autohide="all" data-theme="white">
-<!--
+
         <a class="spotlight" 
-            href="pic/gallery/096.jpg"> <img src="pic/thumb/thumb-096.jpg"
+            href="pic/gallery/024.jpg"> <img src="pic/thumb/thumb-024.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/095.jpg"> <img src="pic/thumb/thumb-095.jpg"
+            href="pic/gallery/023.jpg"> <img src="pic/thumb/thumb-023.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/094.jpg"> <img src="pic/thumb/thumb-094.jpg"
+            href="pic/gallery/022.jpg"> <img src="pic/thumb/thumb-022.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/093.jpg"> <img src="pic/thumb/thumb-093.jpg"
+            href="pic/gallery/021.jpg"> <img src="pic/thumb/thumb-021.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/092.jpg"> <img src="pic/thumb/thumb-092.jpg"
+            href="pic/gallery/020.jpg"> <img src="pic/thumb/thumb-020.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/091.jpg"> <img src="pic/thumb/thumb-091.jpg"
+            href="pic/gallery/019.jpg"> <img src="pic/thumb/thumb-019.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/090.jpg"> <img src="pic/thumb/thumb-090.jpg"
+            href="pic/gallery/018.jpg"> <img src="pic/thumb/thumb-018.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/089.jpg"> <img src="pic/thumb/thumb-089.jpg"
-            alt="Thank you for watching">
-        </a>
--->
-        <a class="spotlight" 
-            href="pic/gallery/088.jpg"> <img src="pic/thumb/thumb-088.jpg"
+            href="pic/gallery/017.jpg"> <img src="pic/thumb/thumb-017.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/087.jpg"> <img src="pic/thumb/thumb-087.jpg"
+            href="pic/gallery/016.jpg"> <img src="pic/thumb/thumb-016.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/086.jpg"> <img src="pic/thumb/thumb-086.jpg"
+            href="pic/gallery/015.jpg"> <img src="pic/thumb/thumb-015.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/085.jpg"> <img src="pic/thumb/thumb-085.jpg"
+            href="pic/gallery/014.jpg"> <img src="pic/thumb/thumb-014.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/084.jpg"> <img src="pic/thumb/thumb-084.jpg"
+            href="pic/gallery/013.jpg"> <img src="pic/thumb/thumb-013.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/083.jpg"> <img src="pic/thumb/thumb-083.jpg"
+            href="pic/gallery/012.jpg"> <img src="pic/thumb/thumb-012.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/082.jpg"> <img src="pic/thumb/thumb-082.jpg"
+            href="pic/gallery/011.jpg"> <img src="pic/thumb/thumb-011.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/081.jpg"> <img src="pic/thumb/thumb-081.jpg"
+            href="pic/gallery/010.jpg"> <img src="pic/thumb/thumb-010.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/080.jpg"> <img src="pic/thumb/thumb-080.jpg"
+            href="pic/gallery/009.jpg"> <img src="pic/thumb/thumb-009.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/079.jpg"> <img src="pic/thumb/thumb-079.jpg"
+            href="pic/gallery/008.jpg"> <img src="pic/thumb/thumb-008.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/078.jpg"> <img src="pic/thumb/thumb-078.jpg"
+            href="pic/gallery/007.jpg"> <img src="pic/thumb/thumb-007.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/077.jpg"> <img src="pic/thumb/thumb-077.jpg"
+            href="pic/gallery/006.jpg"> <img src="pic/thumb/thumb-006.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/076.jpg"> <img src="pic/thumb/thumb-076.jpg"
+            href="pic/gallery/005.jpg"> <img src="pic/thumb/thumb-005.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/075.jpg"> <img src="pic/thumb/thumb-075.jpg"
+            href="pic/gallery/004.jpg"> <img src="pic/thumb/thumb-004.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/074.jpg"> <img src="pic/thumb/thumb-074.jpg"
+            href="pic/gallery/003.jpg"> <img src="pic/thumb/thumb-003.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/073.jpg"> <img src="pic/thumb/thumb-073.jpg"
+            href="pic/gallery/002.jpg"> <img src="pic/thumb/thumb-002.jpg"
             alt="Thank you for watching">
         </a>
+        <a class="spotlight" 
+            href="pic/gallery/001.jpg"> <img src="pic/thumb/thumb-001.jpg"
+            alt="Thank you for watching">
+        </a>
+
     </div>
 
 <br>
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
+		<li><a href="2022-02.html">«</a></li>
+		<li><a href="index.html">1</a></li>
 		<li><a href="2022-03.html">2</a></li>
 		<li><a href="2022-02.html">3</a></li>
-		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="#" class="active">4</a></li>
+		<li><a href="#">»</a></li>
 	</ul>
 </div>
 
