--- a/2022-02.html
+++ b/2022-02.html
@@ -88,126 +88,125 @@
 
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
+		<li><a href="2022-03.html">«</a></li>
+		<li><a href="index.html">1</a></li>
 		<li><a href="2022-03.html">2</a></li>
-		<li><a href="2022-02.html">3</a></li>
+		<li><a href="#" class="active">3</a></li>
 		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="2022-01.html">»</a></li>
 	</ul>
 </div>
 <br>
 
     <div class="spotlight-group" data-autohide="all" data-theme="white">
-<!--
         <a class="spotlight" 
-            href="pic/gallery/096.jpg"> <img src="pic/thumb/thumb-096.jpg"
+            href="pic/gallery/048.jpg"> <img src="pic/thumb/thumb-048.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/095.jpg"> <img src="pic/thumb/thumb-095.jpg"
+            href="pic/gallery/047.jpg"> <img src="pic/thumb/thumb-047.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/094.jpg"> <img src="pic/thumb/thumb-094.jpg"
+            href="pic/gallery/046.jpg"> <img src="pic/thumb/thumb-046.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/093.jpg"> <img src="pic/thumb/thumb-093.jpg"
+            href="pic/gallery/045.jpg"> <img src="pic/thumb/thumb-045.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/092.jpg"> <img src="pic/thumb/thumb-092.jpg"
+            href="pic/gallery/044.jpg"> <img src="pic/thumb/thumb-044.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/091.jpg"> <img src="pic/thumb/thumb-091.jpg"
+            href="pic/gallery/043.jpg"> <img src="pic/thumb/thumb-043.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/090.jpg"> <img src="pic/thumb/thumb-090.jpg"
+            href="pic/gallery/042.jpg"> <img src="pic/thumb/thumb-042.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/089.jpg"> <img src="pic/thumb/thumb-089.jpg"
-            alt="Thank you for watching">
-        </a>
--->
-        <a class="spotlight" 
-            href="pic/gallery/088.jpg"> <img src="pic/thumb/thumb-088.jpg"
+            href="pic/gallery/041.jpg"> <img src="pic/thumb/thumb-041.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/087.jpg"> <img src="pic/thumb/thumb-087.jpg"
+            href="pic/gallery/040.jpg"> <img src="pic/thumb/thumb-040.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/086.jpg"> <img src="pic/thumb/thumb-086.jpg"
+            href="pic/gallery/039.jpg"> <img src="pic/thumb/thumb-039.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/085.jpg"> <img src="pic/thumb/thumb-085.jpg"
+            href="pic/gallery/038.jpg"> <img src="pic/thumb/thumb-038.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/084.jpg"> <img src="pic/thumb/thumb-084.jpg"
+            href="pic/gallery/037.jpg"> <img src="pic/thumb/thumb-037.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/083.jpg"> <img src="pic/thumb/thumb-083.jpg"
+            href="pic/gallery/036.jpg"> <img src="pic/thumb/thumb-036.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/082.jpg"> <img src="pic/thumb/thumb-082.jpg"
+            href="pic/gallery/035.jpg"> <img src="pic/thumb/thumb-035.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/081.jpg"> <img src="pic/thumb/thumb-081.jpg"
+            href="pic/gallery/034.jpg"> <img src="pic/thumb/thumb-034.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/080.jpg"> <img src="pic/thumb/thumb-080.jpg"
+            href="pic/gallery/033.jpg"> <img src="pic/thumb/thumb-033.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/079.jpg"> <img src="pic/thumb/thumb-079.jpg"
+            href="pic/gallery/032.jpg"> <img src="pic/thumb/thumb-032.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/078.jpg"> <img src="pic/thumb/thumb-078.jpg"
+            href="pic/gallery/031.jpg"> <img src="pic/thumb/thumb-031.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/077.jpg"> <img src="pic/thumb/thumb-077.jpg"
+            href="pic/gallery/030.jpg"> <img src="pic/thumb/thumb-030.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/076.jpg"> <img src="pic/thumb/thumb-076.jpg"
+            href="pic/gallery/029.jpg"> <img src="pic/thumb/thumb-029.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/075.jpg"> <img src="pic/thumb/thumb-075.jpg"
+            href="pic/gallery/028.jpg"> <img src="pic/thumb/thumb-028.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/074.jpg"> <img src="pic/thumb/thumb-074.jpg"
+            href="pic/gallery/027.jpg"> <img src="pic/thumb/thumb-027.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/073.jpg"> <img src="pic/thumb/thumb-073.jpg"
+            href="pic/gallery/026.jpg"> <img src="pic/thumb/thumb-026.jpg"
             alt="Thank you for watching">
         </a>
+        <a class="spotlight" 
+            href="pic/gallery/025.jpg"> <img src="pic/thumb/thumb-025.jpg"
+            alt="Thank you for watching">
+        </a>
+
     </div>
 
 <br>
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
+		<li><a href="2022-03.html">«</a></li>
+		<li><a href="index.html">1</a></li>
 		<li><a href="2022-03.html">2</a></li>
-		<li><a href="2022-02.html">3</a></li>
+		<li><a href="#" class="active">3</a></li>
 		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="2022-01.html">»</a></li>
 	</ul>
 </div>
 
