--- a/2022-03.html
+++ b/2022-03.html
@@ -88,126 +88,126 @@
 
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
-		<li><a href="2022-03.html">2</a></li>
+		<li><a href="index.html">«</a></li>
+		<li><a href="index.html">1</a></li>
+		<li><a href="#" class="active">2</a></li>
 		<li><a href="2022-02.html">3</a></li>
 		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="2022-02.html">»</a></li>
 	</ul>
 </div>
 <br>
 
     <div class="spotlight-group" data-autohide="all" data-theme="white">
-<!--
+
         <a class="spotlight" 
-            href="pic/gallery/096.jpg"> <img src="pic/thumb/thumb-096.jpg"
+            href="pic/gallery/072.jpg"> <img src="pic/thumb/thumb-072.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/095.jpg"> <img src="pic/thumb/thumb-095.jpg"
+            href="pic/gallery/071.jpg"> <img src="pic/thumb/thumb-071.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/094.jpg"> <img src="pic/thumb/thumb-094.jpg"
+            href="pic/gallery/070.jpg"> <img src="pic/thumb/thumb-070.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/093.jpg"> <img src="pic/thumb/thumb-093.jpg"
+            href="pic/gallery/069.jpg"> <img src="pic/thumb/thumb-069.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/092.jpg"> <img src="pic/thumb/thumb-092.jpg"
+            href="pic/gallery/068.jpg"> <img src="pic/thumb/thumb-068.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/091.jpg"> <img src="pic/thumb/thumb-091.jpg"
+            href="pic/gallery/067.jpg"> <img src="pic/thumb/thumb-067.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/090.jpg"> <img src="pic/thumb/thumb-090.jpg"
+            href="pic/gallery/066.jpg"> <img src="pic/thumb/thumb-066.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/089.jpg"> <img src="pic/thumb/thumb-089.jpg"
-            alt="Thank you for watching">
-        </a>
--->
-        <a class="spotlight" 
-            href="pic/gallery/088.jpg"> <img src="pic/thumb/thumb-088.jpg"
+            href="pic/gallery/065.jpg"> <img src="pic/thumb/thumb-065.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/087.jpg"> <img src="pic/thumb/thumb-087.jpg"
+            href="pic/gallery/064.jpg"> <img src="pic/thumb/thumb-064.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/086.jpg"> <img src="pic/thumb/thumb-086.jpg"
+            href="pic/gallery/063.jpg"> <img src="pic/thumb/thumb-063.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/085.jpg"> <img src="pic/thumb/thumb-085.jpg"
+            href="pic/gallery/062.jpg"> <img src="pic/thumb/thumb-062.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/084.jpg"> <img src="pic/thumb/thumb-084.jpg"
+            href="pic/gallery/061.jpg"> <img src="pic/thumb/thumb-061.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/083.jpg"> <img src="pic/thumb/thumb-083.jpg"
+            href="pic/gallery/060.jpg"> <img src="pic/thumb/thumb-060.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/082.jpg"> <img src="pic/thumb/thumb-082.jpg"
+            href="pic/gallery/059.jpg"> <img src="pic/thumb/thumb-059.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/081.jpg"> <img src="pic/thumb/thumb-081.jpg"
+            href="pic/gallery/058.jpg"> <img src="pic/thumb/thumb-058.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/080.jpg"> <img src="pic/thumb/thumb-080.jpg"
+            href="pic/gallery/057.jpg"> <img src="pic/thumb/thumb-057.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/079.jpg"> <img src="pic/thumb/thumb-079.jpg"
+            href="pic/gallery/056.jpg"> <img src="pic/thumb/thumb-056.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/078.jpg"> <img src="pic/thumb/thumb-078.jpg"
+            href="pic/gallery/055.jpg"> <img src="pic/thumb/thumb-055.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/077.jpg"> <img src="pic/thumb/thumb-077.jpg"
+            href="pic/gallery/054.jpg"> <img src="pic/thumb/thumb-054.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/076.jpg"> <img src="pic/thumb/thumb-076.jpg"
+            href="pic/gallery/053.jpg"> <img src="pic/thumb/thumb-053.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/075.jpg"> <img src="pic/thumb/thumb-075.jpg"
+            href="pic/gallery/052.jpg"> <img src="pic/thumb/thumb-052.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/074.jpg"> <img src="pic/thumb/thumb-074.jpg"
+            href="pic/gallery/051.jpg"> <img src="pic/thumb/thumb-051.jpg"
             alt="Thank you for watching">
         </a>
         <a class="spotlight" 
-            href="pic/gallery/073.jpg"> <img src="pic/thumb/thumb-073.jpg"
+            href="pic/gallery/050.jpg"> <img src="pic/thumb/thumb-050.jpg"
             alt="Thank you for watching">
         </a>
+        <a class="spotlight" 
+            href="pic/gallery/049.jpg"> <img src="pic/thumb/thumb-049.jpg"
+            alt="Thank you for watching">
+        </a>
+
     </div>
 
 <br>
 <div class="center">
 	<ul class="pagination">
-		<li><a href="#">«</a></li>
-		<li><a href="#" class="active">1</a></li>
-		<li><a href="2022-03.html">2</a></li>
+		<li><a href="index.html">«</a></li>
+		<li><a href="index.html">1</a></li>
+		<li><a href="#" class="active">2</a></li>
 		<li><a href="2022-02.html">3</a></li>
 		<li><a href="2022-01.html">4</a></li>
-		<li><a href="2022-03.html">»</a></li>
+		<li><a href="2022-02.html">»</a></li>
 	</ul>
 </div>
 
